--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
       
     </tr>
   </table>
+
+  <h3 class='miss'>"These aren't the droids you're looking for" - Obi-Wan Kenobi
+  </h3>
+  <h3 class='drain'>"Strong am I with the Force, but not that strong. Twilight is upon me, and soon night must fall. That is the way of things. The way of the Force." - Yoda</h4>
   
   <div class="buttons">
   <button id='fire'>Assign X-Wings</button>
   <button id='force'>Use Force to Evade x <span id='scamles'>3</span></button>
   </div>
+  
 
   <table>
     <tr>
@@ -38,10 +43,9 @@
     </tr>
   </table>
 
+  <div class="buttons"><button id="reset">Do or do not, there is a RE-try.</button></div>
 
 
-  <h3 class='miss'>"These aren't the droids you're looking for" - Obi-Wan Kenobi
-  </h3>
-  <h3 class='drain'>"Strong am I with the Force, but not that strong. Twilight is upon me, and soon night must fall. That is the way of things. The way of the Force." - Yoda</h4>
+
 </body>
 </html>
