--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 
   <table >
     <tr class='stars'>
-      
+
     </tr>
   </table>
 
   <h3 class='miss'>"These aren't the droids you're looking for" - Obi-Wan Kenobi
   </h3>
   <h3 class='drain'>"Strong am I with the Force, but not that strong. Twilight is upon me, and soon night must fall. That is the way of things. The way of the Force." - Yoda</h4>
-  
+
   <div class="buttons">
-  <button id='fire'>Assign X-Wings</button>
-  <button id='force'>Use Force to Evade x <span id='scamles'>3</span></button>
+  <button class="actionButton" id='fire'>Assign X-Wings</button>
+  <button class="actionButton" id='force'>Use Force to Evade x <span id='scamles'>3</span></button>
   </div>
-  
+
 
   <table>
     <tr>
-      <td class="numbers">1<img src="xwing.ico"></td>
-      <td class="numbers">2<img src="xwing.ico"></td>
-      <td class="numbers">3<img src="xwing.ico"></td>
-      <td class="numbers">4<img src="xwing.ico"></td>
-      <td class="numbers">5<img src="xwing.ico"></td>
-      <td class="numbers">6<img src="xwing.ico"></td>
-      <td class="numbers">7<img src="xwing.ico"></td>
-      <td class="numbers">8<img src="xwing.ico"></td>
-      <td class="numbers">9<img src="xwing.ico"></td>
+      <td class="numbers">1<img src="images/xwing.ico"></td>
+      <td class="numbers">2<img src="images/xwing.ico"></td>
+      <td class="numbers">3<img src="images/xwing.ico"></td>
+      <td class="numbers">4<img src="images/xwing.ico"></td>
+      <td class="numbers">5<img src="images/xwing.ico"></td>
+      <td class="numbers">6<img src="images/xwing.ico"></td>
+      <td class="numbers">7<img src="images/xwing.ico"></td>
+      <td class="numbers">8<img src="images/xwing.ico"></td>
+      <td class="numbers">9<img src="images/xwing.ico"></td>
     </tr>
   </table>
 
-  <div class="buttons"><button id="reset">Do or do not, there is a RE-try.</button></div>
+  <div class="buttons"><button class="actionButton" id="reset">Do or do not, there is a RE-try.</button></div>
 
 
 
